--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,29 @@ body {
     height: 100%;
 }
 
-.middle-container {
+.personal-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #C07F00;
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+.skills-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #C07F00;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.personal-container > div {
+    height: 80%;
+    width: 80%;
 }
 
 #cv_picture {
@@ -45,4 +63,10 @@ h1 {
 
 h2 {
     font-size: 2rem;
+}
+
+hr {
+    border-top: 15px dotted #4C3D3D;
+    border-radius: 0;
+    margin: 0 0 0 0;
 }
