--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
 
 .personal-container > div {
     height: 80%;
-    width: 80%;
+    width: 40%;
 }
 
 #cv_picture {
@@ -67,6 +67,14 @@ h2 {
 
 hr {
     border-top: 15px dotted #4C3D3D;
-    border-radius: 0;
-    margin: 0 0 0 0;
+    border-bottom: 0;
+    border-left: 0;
+    border-right: 0;
+    width: 40%;
+}
+
+p {
+    color: #4C3D3D;
+    font-size: 2rem;
+    text-align: center;
 }
